stylesheets/_modules.scss
/* ... */
// Module: Emoji
@mixin emoji-size($size) {
  &--#{$size} {
    width: $size;
    height: $size;
    &--inline {
      display: inline-block;
      vertical-align: bottom;
      background-size: $size $size;
    }
  }
  &__image--#{$size} {
    width: $size;
    height: $size;
    transform: translate3d(0, 0, 0);
    vertical-align: baseline;
  }
}

.module-emoji {
  display: flex;
  justify-content: center;
  align-items: center;
  color: transparent;
  font-family: auto;

  @include light-theme() {
    caret-color: $color-gray-90;
  }

  @include dark-theme() {
    caret-color: $color-gray-05;
  }

  @include emoji-size(16px);
  @include emoji-size(18px);
  @include emoji-size(20px);
  @include emoji-size(24px);
  @include emoji-size(28px);
  @include emoji-size(32px);
  @include emoji-size(48px);
  @include emoji-size(64px);
  @include emoji-size(66px);
}

// Module: CompositionInput
.module-composition-input {
  &__quill {
    height: 100%;

    .ql-editor {
      caret-color: transparent;
      padding: 0;
      text-align: start;
      white-space: break-spaces;
      line-height: inherit;

      &--loaded {
        caret-color: auto;
      }

      &.ql-blank::before {
        left: 0;
        right: 0;
        font-style: normal;
      }

      .emoji-blot {
        width: 20px;
        height: 20px;
        vertical-align: text-bottom;
      }
    }
  }

  &__at-mention {
    background-color: $color-gray-20;
    border-radius: 4px;
    display: inline;
    padding-left: 4px;
    padding-right: 4px;
    height: 22px;
    line-height: 22px;

    @include dark-theme {
      background-color: $color-gray-60;
    }
  }

  &__input {
    $border-size: 1px;

    border-radius: 18px;
    overflow: hidden;
    word-break: break-word;

    // Override Quill styles
    .ql-container {
      @include font-body-1;
    }

    .ql-blank::before {
      @include light-theme() {
        color: $color-gray-45;
      }

      @include dark-theme() {
        color: $color-gray-25;
      }
    }

    @include light-theme() {
      // Same as background color
      background-color: $color-gray-05;
      color: $color-gray-90;
    }

    @include dark-theme() {
      // Same as background color
      background-color: $color-gray-75;
      color: $color-gray-05;
    }

    &__scroller {
      $padding-top: 5px;
      padding: $padding-top 10px $padding-top 10px;

      min-height: calc(32px - 2 * $border-size);
      max-height: calc(72px - 2 * $border-size);
      overflow: auto;

      &::-webkit-scrollbar-thumb {
        @include light-theme {
          border: 2px solid $color-gray-05;
        }
        @include dark-theme {
          border: 2px solid $color-gray-75;
        }
      }

      &--large {
        max-height: calc(212px - 2 * $border-size);
        min-height: calc(212px - 2 * $border-size);

        .DraftEditor-root {
          height: calc(212px - 2 * $padding-top - 2 * $border-size);
        }
      }
    }

    border: $border-size solid transparent;

    &:focus-within {
      outline: 0;
      @include keyboard-mode {
        border: $border-size solid $color-ultramarine;
      }
    }
  }

  &__suggestions {
    padding: 0;
    margin-bottom: 6px;
    border-radius: 8px;
    z-index: $z-index-above-base;
    overflow: hidden;

    &--scroller {
      max-height: 300px;
      overflow-y: auto;
    }

    @include popper-shadow();

    @include light-theme() {
      background: $color-white;
    }

    @include dark-theme() {
      background: $color-gray-75;
    }

    &__row {
      height: 34px;
      padding: 0 12px;
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: flex-start;
      background: none;
      border: none;
      width: 100%;

      &--mention {
        height: 40px;
      }

      &:focus {
        outline: 0;
      }

      @include font-body-2;

      @include light-theme() {
        color: $color-gray-60;
      }

      @include dark-theme() {
        color: $color-gray-25;
      }

      &__short-name {
        margin-left: 4px;
      }

      &--selected,
      &:hover {
        @include light-theme() {
          background: $color-gray-05;
          color: $color-gray-90;
        }

        @include dark-theme() {
          background: $color-gray-60;
          color: $color-gray-05;
        }
      }
    }

    &__title {
      padding-left: 8px;
    }

    stroke: $color-white;
  }
}

// Module: Last Seen Indicator

.module-last-seen-indicator {
  padding-top: 25px;
  padding-bottom: 35px;
  user-select: none;
}

.module-last-seen-indicator__bar {
  background-color: $color-gray-45;
  width: 100%;
  height: 1px;
}

.module-last-seen-indicator__text {
  margin-top: 3px;

  @include font-body-2-bold;

  text-align: center;

  @include light-theme {
    color: $color-gray-90;
  }
  @include dark-theme {
    color: $color-gray-05;
  }
}

// Module: Avatar Popup

.module-avatar-popup {
  min-width: 240px;
  max-width: 320px;

  border-radius: 4px;
  padding-bottom: 4px;

  @include popper-shadow;

  @include light-theme {
    color: $color-gray-90;
    background-color: $color-white;
  }
  @include dark-theme {
    color: $color-gray-05;
    background-color: $color-gray-75;
  }
}

.module-avatar-popup__profile {
  @include button-reset();
  align-items: center;
  display: flex;
  flex-direction: row;
  width: 100%;

  @include light-theme {
    &:hover {
      background-color: $color-gray-05;
    }
  }
  @include dark-theme {
    &:hover {
      background-color: $color-gray-60;
    }
  }
  @include keyboard-mode {
    &:hover {
      background-color: inherit;
    }
    &:focus {
      background-color: $color-gray-05;
    }
  }
  @include dark-keyboard-mode {
    &:hover {
      background-color: inherit;
    }
    &:focus {
      background-color: $color-gray-60;
    }
  }
}

.module-avatar-popup__profile {
  padding: 12px;
}
/* ... */

